just fixed a couple of spacing issues

--- a/rb-client/src/components/nav/navbar.scss
+++ b/rb-client/src/components/nav/navbar.scss
@@ -1,7 +1,8 @@
 .app-bar {
     background: transparent !important;
     box-shadow: none !important;
-
+    width: 10% !important;
+    
     .menu-button {
         display: flex;
         align-self: flex-end;
